Fix header/username alignment

--- a/app/assets/stylesheets/scaffold.css.sass
+++ b/app/assets/stylesheets/scaffold.css.sass
@@ -9,9 +9,10 @@ header
   border-top: 2px solid black
   margin: 15px 8px 40px 8px
 
-  h2
+  .user-name
     color: rgb(112,112,112)
-    margin-left: 24px
+    font-weight: normal
+    margin-left: 28px
 
 button, i
   text-decoration: none
